--- a/FoodEntryView.html
+++ b/FoodEntryView.html
@@ -1,3 +1,7 @@
+<?php 
+require_once 'Utils.php';
+$auth = new Authenticate();
+?>
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,7 +10,11 @@
 </head>
 
 <body>
-
+<header>
+<?php
+echoRibbon( $auth);
+?>
+</header>
 <?php
 if( $newFoodAdded)
 { 
