--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <?php
 	include 'ribbon.html';
 ?>
-<iframe src="http://www.psych.med.umich.edu/patient-care/eating-disorders-program/" height="100%" width="100%"></iframe>
-<!-- <iframe src="https://www.wikipedia.org/" height="100%" width="100%"></iframe> -->
+<!-- <iframe src="http://www.psych.med.umich.edu/patient-care/eating-disorders-program/" height="100%" width="100%"></iframe> -->
+<iframe src="https://www.wikipedia.org/" height="100%" width="100%"></iframe>
 <!-- <iframe src="http://www.weather.com/" height="100%" width="100%"></iframe> -->
 <!-- <iframe src="http://www.theonion.com/" height="100%" width="100%"></iframe> -->
 
