Change background to be an image of food

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<?php 
-
-?>
+<!DOCTYPE html>
+<html>
 <head>
 <title>Menus Index</title>
 </head>
@@ -9,10 +8,13 @@
 	include 'ribbon.html';
 ?>
 <!-- <iframe src="http://www.psych.med.umich.edu/patient-care/eating-disorders-program/" height="100%" width="100%"></iframe> -->
-<iframe src="https://www.wikipedia.org/" height="100%" width="100%"></iframe>
+<!-- <iframe src="https://www.wikipedia.org/" height="100%" width="100%"></iframe> -->
 <!-- <iframe src="http://www.weather.com/" height="100%" width="100%"></iframe> -->
 <!-- <iframe src="http://www.theonion.com/" height="100%" width="100%"></iframe> -->
 
+<div>
+<img src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Good_Food_Display_-_NCI_Visuals_Online.jpg" height="100%" width="100%"> 
+</div>
 
 </body>
 </html>
